--- a/templates/highly_active_chats.html
+++ b/templates/highly_active_chats.html
@@ -19,12 +19,12 @@
     Channels with no new messages will be randomly shuffled. Please note that the number of messages might not be accurate.
 </p>
 
-<script src="static/js/highly-active-chats.js"></script>
-<script>
-    let channel_stats_server = "{{config.channels_stats_server}}"
-    $(document).ready( function () {
-        $('[data-toggle="tooltip"]').tooltip();
-        load_stats();
-    });
-</script>
+{#<script src="static/js/highly-active-chats.js"></script>#}
+{#<script>#}
+{#    let channel_stats_server = "{{config.channels_stats_server}}"#}
+{#    $(document).ready( function () {#}
+{#        $('[data-toggle="tooltip"]').tooltip();#}
+{#        load_stats();#}
+{#    });#}
+{#</script>#}
 
