--- a/templates/components.html
+++ b/templates/components.html
@@ -95,7 +95,7 @@
     <div class="col-md-3 col-xs-6">
       <div class="card text-center shadow p-3 bg-light rounded h-100">
         <div class="text-muted">
-          <img src="{{ member.image or "static/images/committee/placeholder.png" }}" class="rounded mx-auto my-3" style="height: 150px;" />
+          <a href="{{ member.pweb or 'none'}}"><img src="{{ member.image or "static/images/committee/placeholder.png" }}" class="rounded mx-auto my-3" style="height: 150px;" /></a>
           <h5 class="card-title" align="center">{{member.name}}</h5>
           <div>
             <h6 class="card-subtitle text-muted">
