--- a/templates/base.html
+++ b/templates/base.html
@@ -333,6 +333,6 @@
     </script>
     <script src="static/js/lazy_load.js"></script>
     {% endblock %}
-    {% include "highly_active_chats_modal.html" %}
+{#    {% include "highly_active_chats_modal.html" %}#}
   </body>
 </html>
