--- a/templates/paper.html
+++ b/templates/paper.html
@@ -119,7 +119,7 @@
 {#      <a href="papers.html?program=workshop&track={{paper.content.track}}" class ="badge badge-pill badge-primary">{{ paper.content.track }}</a>#}
 {#      {% endif %}#}
         {% if paper.content.program == "Main" %}
-      <span class="badge badge-secondary">{{ paper.content.program }} Paper</span>
+      <span class="badge badge-secondary">Main Track Paper</span>
         {% elif paper.content.program == "AISI" %}
       <span class="badge badge-secondary">AI for Social Impact Track Paper</span>
         {% elif paper.content.program == "SMT" %}
