--- a/templates/base.html
+++ b/templates/base.html
@@ -218,7 +218,7 @@
                       Sponsors/Exhibitors
                     </a>
                     <a class="dropdown-item" href="ai_job_fail.html">
-                      AI Job Fail
+                      AI Job Fair
                     </a>
                     <a class="dropdown-item" href="reception.html">
                       Reception
