--- a/templates/ai_job_fair.html
+++ b/templates/ai_job_fair.html
@@ -9,7 +9,7 @@
 
 <div class="row">
   <div class="col-md-7 col-sm-12 pr-5 lead">
-    <p>Welcome to AI job fail!<br><br>
+    <p>Welcome to AI job fair!<br><br>
       Here is nothing left.
     </p>
   </div>
