--- a/templates/help_desk.html
+++ b/templates/help_desk.html
@@ -64,7 +64,7 @@
   <div class="rocketchat-safety-valve">
     <ul>
       <li>If RocketChat does not load after 60 seconds and you would like to ask a question, please try reloading the page</li>
-      <li>Raise technical issues <a class="rocketchat-help-link" href="/virtual/2020/protected/rc_helpdesk.html">here</a></li>
+      <li>Raise technical issues <a class="rocketchat-help-link" href="/help_desk.html">here</a></li>
     </ul>
   </div>
 
