update committee and help desk

--- a/templates/help_desk.html
+++ b/templates/help_desk.html
@@ -56,7 +56,7 @@
 <div class="row">
   <div class="top-info">
     <p>To access rocketchat in a extra window, please click on "full screen".</p>
-    <a class="btn btn-outline-secondary btn" href="https://neurips2020.rocket.chat/channel/townhall?resumeToken=vJ8P5O0yQ3rcNyKrBrz8qUAubj-9cAj8zEayZS2hlcM">Launch Rocket.Chat full screen</a> 
+    <a class="btn btn-outline-secondary btn" href="https://aaai-21.rocket.chat/channel/announcements">Launch Rocket.Chat full screen</a> 
   </div>
 </div>
 
@@ -69,14 +69,14 @@
   </div>
 
   <div class='public-chat-title-box'>
-    <span class="float-left"><a class="text-warning text-sm" href="/rocketchat/concerns"  target="_blank">Concerns</a></span>
-    <a style="float:right;" class='rocketchat-full-button' href="https://localhost:3000/" target="_blank" title="Full Size">
+    <!-- <span class="float-left"><a class="text-warning text-sm" href="/rocketchat/concerns"  target="_blank">Concerns</a></span> -->
+    <a style="float:right;" class='rocketchat-full-button' href="https://aaai-21.rocket.chat/channel/announcements" target="_blank" title="Full Size">
       Full Screen
     </a>
     Chat
   </div>
   <div class="rocketchat-frame">
-    <iframe frameborder="0" src="http://localhost:3000/channel/test?layout=embedded"></iframe>
+    <iframe frameborder="0" src="https://aaai-21.rocket.chat/channel/announcements?layout=embedded"></iframe>
   </div>
 </div>
 {% endblock %}
