--- a/templates/organizers.html
+++ b/templates/organizers.html
@@ -7,11 +7,21 @@
 <style>
     div.text-muted:hover {
         background-color: rgb(175, 174, 174);
+        /* width: 100%;
+        height: auto; */
     }
 
-    /* div#pinfo :hover {
+    /* div.col-md-3.col-xs-6 :hover {
         background-color: rgb(175, 174, 174);
+        width: 2vw;
+        height: auto;
     } */
+
+    img.rounded.mx-auto.my-3 {
+        display: block; 
+        width: auto;
+        height: 8vw;
+    }
 
 </style>
 
