--- a/templates/components.html
+++ b/templates/components.html
@@ -96,7 +96,7 @@
       <div class="card text-center shadow p-3 bg-light rounded h-100" id='pinfo'>
         <a href="{{ member.pweb or 'none'}}">
           <div class="text-muted">
-            <img src="{{ member.image or "static/images/committee/placeholder.png" }}" class="rounded mx-auto my-3" style="height: 150px;" />
+            <img src="{{ member.image or "static/images/committee/placeholder.png" }}" class="rounded mx-auto my-3"/>
             <h5 class="card-title" align="center">{{member.name}}</h5>
           <div>
         </a>
