update position of the external website

--- a/templates/eaai.html
+++ b/templates/eaai.html
@@ -15,17 +15,26 @@
 {% endblock %}
 
 {% block heading %}
-{{ components.section("Eleventh Symposium on Educational Advances in Artificial Intelligence (EAAI)") }}
+    <div class="text-center p-3" style="padding-top: 0px">
+    {{ components.section("Eleventh Symposium on Educational Advances in Artificial Intelligence (EAAI)") }}
+
+    <a href="http://eaai.cs.mtu.edu/" target="_blank"  class="card-link">
+        External Site
+    </a>
+    <a href="https://123.com" target="_blank"  class="card-link">
+        Join Zoom Meeting
+    </a>
+    </div>
 <div class="row">
+
+
   <div class="col-12 pb-4">
     <p class="lead">
         Welcome to the Eleventh Symposium on Educational Advances in Artificial Intelligence (EAAI-21)!
 <br><br>
         Saturday – Sunday, February 6-7, 2021
         <br><br>
-        <a href="http://eaai.cs.mtu.edu/" target="_blank"  class="card-link">
-        External Site
-    </a>
+
 <br><br>
         EAAI-21 provides a venue for researchers and educators to discuss issues and share resources related to teaching AI and using AI in education. Contributions address K-12, undergraduate, and post-graduate education. The program comprises the 2021 Outstanding Educator Award Lecture by Michael Wooldridge, a panel on Teaching Online and Blended AI Courses, a main track, a special track on Demos, Software Tools, and Activities for Teaching AI in K-12, a special track on Model AI Assignments, and the EAAI-21 Gin Rummy Undergraduate Research Challenge.
 
