--- a/templates/undergraduate_consortium.html
+++ b/templates/undergraduate_consortium.html
@@ -89,6 +89,18 @@
   </div>
 </div>
 
+<div class="container" style="background-color:white; padding: 0px;">
+  <div class="text-muted text-center">
+  You can open <a href="https://{{config.chat_server}}/channel/Meetings_UndergraduateConsortium" target="_blank">Undergraduate Consortium</a>
+  channel in a separate window.
+  </div>
+
+  <div id="gitter" class="slp">
+        <iframe frameborder="0" src="https://{{config.chat_server}}/channel/Meetings_UndergraduateConsortium?layout=embedded" height="700px" width="100%" ></iframe>
+  </div>
+
+</div>
+
 {% endblock %}
 
 {% block content %}
