--- a/templates/base.html
+++ b/templates/base.html
@@ -217,7 +217,7 @@
                    <a class="dropdown-item" href="sponsors.html">
                       Sponsors/Exhibitors
                     </a>
-                    <a class="dropdown-item" href="ai_job_fail.html">
+                    <a class="dropdown-item" href="ai_job_fair.html">
                       AI Job Fair
                     </a>
                     <a class="dropdown-item" href="reception.html">
