--- a/templates/base.html
+++ b/templates/base.html
@@ -202,6 +202,9 @@
                     <a class="dropdown-item" href="gathers.html">
                       Gather with a Fellow
                     </a>
+                    <a class="dropdown-item" href="awards.html">
+                      AAAI Organization Awards
+                    </a>
                   </div>
 
                 </li>
