--- a/templates/base.html
+++ b/templates/base.html
@@ -226,8 +226,8 @@
                    <a class="dropdown-item" href="sponsors.html">
                       Sponsors/Exhibitors
                     </a>
-                    <a class="dropdown-item" href="ai_job_fair.html">
-                      AI Job Fair
+                    <a class="dropdown-item" href="ai_job_fail.html">
+                      AI Job Fail
                     </a>
                     <a class="dropdown-item" href="reception.html">
                       Reception
@@ -342,6 +342,6 @@
     </script>
     <script src="static/js/lazy_load.js"></script>
     {% endblock %}
-{#    {% include "highly_active_chats_modal.html" %}#}
+    {% include "highly_active_chats_modal.html" %}
   </body>
 </html>
