--- a/templates/help_desk.html
+++ b/templates/help_desk.html
@@ -56,7 +56,7 @@
 <div class="row">
   <div class="top-info">
     <p>To access rocketchat in a extra window, please click on "full screen".</p>
-    <a class="btn btn-outline-secondary btn" href="https://aaai-21.rocket.chat/channel/HelpDesk">Launch Rocket.Chat full screen</a> 
+    <a class="btn btn-outline-secondary btn" href="https://neurips2020.rocket.chat/channel/townhall?resumeToken=vJ8P5O0yQ3rcNyKrBrz8qUAubj-9cAj8zEayZS2hlcM">Launch Rocket.Chat full screen</a> 
   </div>
 </div>
 
@@ -64,19 +64,19 @@
   <div class="rocketchat-safety-valve">
     <ul>
       <li>If RocketChat does not load after 60 seconds and you would like to ask a question, please try reloading the page</li>
-      <li>Raise technical issues <a class="rocketchat-help-link" href="/help_desk.html">here</a></li>
+      <li>Raise technical issues <a class="rocketchat-help-link" href="/virtual/2020/protected/rc_helpdesk.html">here</a></li>
     </ul>
   </div>
 
   <div class='public-chat-title-box'>
-    <!-- <span class="float-left"><a class="text-warning text-sm" href="/rocketchat/concerns"  target="_blank">Concerns</a></span> -->
-    <a style="float:right;" class='rocketchat-full-button' href="https://aaai-21.rocket.chat/channel/HelpDesk" target="_blank" title="Full Size">
+    <span class="float-left"><a class="text-warning text-sm" href="/rocketchat/concerns"  target="_blank">Concerns</a></span>
+    <a style="float:right;" class='rocketchat-full-button' href="https://localhost:3000/" target="_blank" title="Full Size">
       Full Screen
     </a>
     Chat
   </div>
   <div class="rocketchat-frame">
-    <iframe frameborder="0" src="https://aaai-21.rocket.chat/channel/HelpDesk?layout=embedded"></iframe>
+    <iframe frameborder="0" src="http://localhost:3000/channel/test?layout=embedded"></iframe>
   </div>
 </div>
 {% endblock %}
