--- a/templates/eaai.html
+++ b/templates/eaai.html
@@ -1,4 +1,4 @@
-{% set active_page = "EAAI" %}
+{% set active_page = "IAAI" %}
 {% extends "base.html" %}
 
 {% block top %}
@@ -9,175 +9,48 @@
 {% endblock %}
 
 
-{% set page_title = "EAAI" %}
+{% set page_title = "IAAI" %}
 {% block head %}
 {{ super() }}
 {% endblock %}
 
 {% block heading %}
 {{ components.section("Eleventh Symposium on Educational Advances in Artificial Intelligence (EAAI)") }}
+
 <div class="row">
   <div class="col-12 pb-4">
     <p class="lead">
-        Welcome to the Eleventh Symposium on Educational Advances in Artificial Intelligence (EAAI-21)!
+        Welcome to EAAI-21!
 <br><br>
-        Saturday – Sunday, February 6-7, 2021
-        <br><br>
-        <a href="http://eaai.cs.mtu.edu/" target="_blank"  class="card-link">
-        External Site
-    </a>
+        Eleventh Symposium on Educational Advances in Artificial Intelligence
+February 6-7, 2021
 <br><br>
-        EAAI-21 provides a venue for researchers and educators to discuss issues and share resources related to teaching AI and using AI in education. Contributions address K-12, undergraduate, and post-graduate education. The program comprises the 2021 Outstanding Educator Award Lecture by Michael Wooldridge, a panel on Teaching Online and Blended AI Courses, a main track, a special track on Demos, Software Tools, and Activities for Teaching AI in K-12, a special track on Model AI Assignments, and the EAAI-21 Gin Rummy Undergraduate Research Challenge.
-
+        EAAI-21 (http://eaai.cs.mtu.edu) provides a venue for researchers and educators to discuss issues and share resources
+        related to teaching AI and using AI in education. Most contributions address undergraduate and graduate education,
+        but some extend to the K-12 and postgraduate levels. The conference will include the following tracks:
         <br><br>
+* EAAI Main Track<br>
+* Special Paper Track: Demos, Software Tools, and Activities for Teaching AI in K-12<br>
+* Special Paper Track: Gin Rummy Undergraduate Research Challenge<br>
+* Special Track: Model AI Assignments<br>
+<br><br>
+In addition, EAAI will feature the following invited talks:
+<br><br>
+* 2021 AAAI/EAAI-21 Outstanding Educator Award Lecture<br>
+Michael Wooldridge: Talking to the Public about AI<br>
+<br><br>
+* EAAI-21 Panel on Teaching Online<br>
+  Panelists: Ashok Goel, Ansaf Salleb-Aouissi, and Mehran Sehami<br>
+<br><br>
+* EAAI-21 Panel on Evauation of AI Education Outcomes<br>
+  Panelists: TBD<br>
+<br>
 
-        AAAI gratefully acknowledges a generous grant from AI Journal, which helped make this program possible.
-        <br><br>
-Lisa Torrey and Michael Guerzhoy<br>
-EAAI-21 co-chairs
-  </p>
-{#    {{ components.section("EAAI-21 Program Schedule") }}#}
-{#      <p style="text-align: center"><em>last updated: January 7, 2021</em></p>#}
-
-
+EAAI-21 Full Schedule (TBD)
+    </p>
   </div>
-{#    {{ components.section("EAAI-21 Program Schedule") }}#}
-
-    <div class="col-12 pb-4" role="main">
-
-<h1 style="text-align: center" id="eaai-21-program-schedule">EAAI-21 Program Schedule</h1>
-<p style="text-align: center"><em>last updated: January 7, 2021</em></p>
-<h2 id="saturday-february-6-2021">Saturday, February 6, 2021</h2>
-<p>9:30am - 5:15pm EST </p>
-<p><strong>[9:30-10:45am]  Talking to the Public about AI</strong><br>
-<em>Michael Wooldridge - University of Oxford and Alan Turing Institute, London</em></p>
-<p>Since everything went crazy in AI, around 2012, I, like many other members of our community, have frequently found myself put in the position of having to talk about our field to a non-specialist audience. I've been interviewed on TV and radio, and spoken to endless university committees, government committees, and industrial conferences. More recently, following the publication of my two popular science books (the Ladybird Expert Guide to AI [2018], and The Road to Conscious Machines [2020]), I've even begun speaking at a literary festivals (believe me, I never expected to be doing this as a PhD student studying multiagent systems back in 1989). In this talk, I will relate these experiences, the mistakes I made, and what I learned from them – how our field is perceived, what people fear, hope, and expect from it, and how best to communicate excitement about the very real progress we've made recently with a realistic understanding of where we are and where we are going.</p>
-<p><em>Michael Wooldridge is the winner of this year’s Outstanding Educator award. He is a Professor of Computer Science and Head of Department of Computer Science at the University of Oxford, and a programme director for AI at the Alan Turing Institute. He is a Fellow of the ACM, the Association for the Advancement of AI (AAAI), and the European Association for AI (EurAI). From 2014-16, he was President of the European Association for AI, and from 2015-17 he was President of the International Joint Conference on AI (IJCAI). As well as more than 400 technical articles on AI, he has published two popular science introductions to the field: The Ladybird Expert Guide to AI (2018), and The Road to Conscious Machines (Pelican, 2020).</em></p>
-<p><strong>[10:45 - 11:00]  Welcome</strong><br>
-<em>Lisa Torrey - St. Lawrence University</em><br>
-<em>Michael Guerzhoy - Princeton University</em>  </p>
-<p><strong>[11:00 - 11:45]  Main Track</strong>  </p>
-<ul>
-<li>Applied Machine Learning for Games: A Graduate School Course<br>
-<em>Yilei Zeng, Aayush Shah, Jameson Thai, Michael Zyda</em></li>
-<li>Designing a Hybrid AI Residency<br>
-<em>Felipe Leno Da Silva, Silvio Stanzani, Jefferson Coelho, Jorge Mondadori, Muriel Mazzetto, Felipe Sanches Couto, Raphael Cobe</em></li>
-</ul>
-<p><strong>[11:45 - 12:45]  Main Track</strong>  </p>
-<ul>
-<li>AI-Infused Collaborative Inquiry in Upper Elementary School: A Game-Based Learning Approach<br>
-<em>Seung Lee, Bradford Mott, Anne Ottenbreit-Leftwich, Adam Scribner, Sandra Taylor, Kyungjin Park, Jonathan Rowe, Krista Glazewski, Cindy Hmelo-Silver, James Lester</em></li>
-<li>Introduction to Machine Learning with Robots and Playful Learning<br>
-<em>Viktoriya Olari, Kostadin Cvejoski, Øyvind Eide</em></li>
-<li>Learning Artificial Intelligence: Insights into How Youth Encounter and Build Understanding of AI Concepts<br>
-<em>Eric Greenwald, Maxyn Leitner, Ning Wang</em></li>
-</ul>
-<p><strong>[12:45 - 3:00]  Gin Rummy Undergraduate Research Challenge</strong></p>
-<ul>
-<li>Extracting Learned Discard and Knocking Strategies from a Gin Rummy Bot<br>
-<em>Benjamin Goldstein, Jean Astudillo Guerra, Emily Haigh, Bryan Cruz Ulloa, Jeremy Blum</em></li>
-<li>A Heuristic Evaluation Function for Hand Strength Estimation in Gin Rummy<br>
-<em>Aqib Ahmed, Joshua Leppo, Michal Lesniewski, Riken Patel, Jonathan Perez, Jeremy Blum</em></li>
-<li>Estimating Card Fitness for Discard in Gin Rummy<br>
-<em>Jacob Gallucci, Sarah Kettell, Richard Bowser, Christian Overton</em></li>
-<li>A Deterministic Neural Network Approach to Playing Gin Rummy<br>
-<em>Viet Dung Nguyen, Dung Doan, Todd Neller</em></li>
-<li>A Data-Driven Approach for Gin Rummy Hand Evaluation<br>
-<em>Sang Truong, Todd Neller</em></li>
-<li>Opponent Hand Estimation in the Game of Gin Rummy<br>
-<em>Peter Francis, Hoang Anh Just, Todd Neller</em></li>
-<li>Knocking in the Game of Gin Rummy<br>
-<em>Ryzeson Maravich, Taylor Neller, Todd Neller</em></li>
-</ul>
-<p><strong>[3:00 - 3:45]  Main Track</strong>  </p>
-<ul>
-<li>Using Visualized NLP in Undergraduate Students' Learning about Natural Language<br>
-<em>Cecilia Ovesdotter Alm, Alex Hedges</em></li>
-<li>Deep Discourse Analysis for Generating Personalized Feedback in Intelligent Tutor Systems<br>
-<em>Matt Grenander, Robert Belfer, Ekaterina Kochmar, Iulian Serban, François St-Hilaire, Jackie Cheung</em> </li>
-</ul>
-<p><strong>[3:45 - 4:30]  Main Track</strong>  </p>
-<ul>
-<li>Educational Question Mining At Scale: Prediction, Analysis and Personalization<br>
-<em>Zichao Wang, Sebastian Tschiatschek, Simon Woodhead, Jose Miguel Hernandez Lobato, Simon Peyton Jones, Richard Baraniuk, Cheng Zhang</em></li>
-<li>Student Knowledge Prediction for Teacher-Student Interaction<br>
-<em>Seonghun Kim, Woojin Kim, Yeonju Jang, Heeseok Jung, Seongyune Choi, Hyeoncheol Kim</em></li>
-</ul>
-<p><strong>[4:30 - 5:15]  Main Track</strong>  </p>
-<ul>
-<li>Why and What to Teach: AI Curriculum for Elementary School<br>
-<em>Seonghun Kim, Yeonju Jang, Woojin Kim, Seongyune Choi, Heeseok Jung, Soohwan Kim, Hyeoncheol Kim</em></li>
-<li>Teacher Perspectives on How To Train Your Robot: A Middle School AI and Ethics Curriculum<br>
-<em>Randi Williams, Stephen Kaputsos, Cynthia Breazeal</em></li>
-</ul>
-<h2 id="sunday-february-7-2021">Sunday, February 7, 2021</h2>
-<p>10:00am - 6:00pm EST </p>
-<p><strong>[10:00 - 11:15]  Teaching Online and Blended AI Courses</strong><br>
-<em>Ashok Goel - Georgia Institute of Technology</em><br>
-<em>Ansaf Salleb-Aouissi - Columbia University</em><br>
-<em>Mehran Sehami - Stanford University</em>  </p>
-<p>This panel is composed of AI faculty with experience teaching online and blended classes. Many of us found ourselves teaching AI courses online for the first time last year, and even after COVID-19 subsides, higher education is likely to retain online components. How will we make the most of this challenge (and opportunity)? How do we engage and bond with students online? What are the best tools for AI courses? In a blended model, which components of a course can be done best online and which are best in person? Panelists will share what they’ve learned on these topics and more.</p>
-<p><em>Ashok Goel is a Professor in the School of Interactive Computing at Georgia Institute of Technology and the Chief Scientist with Georgia Tech’s Center for 21st Century Universities. In 2014, he co-developed a Udacity course on Knowledge-Based AI; in 2016, his research laboratory developed Jill Watson, a virtual teaching assistant for automatically answering questions in online classes; and in 2019, he co-edited a volume on Blended Learning published by MIT Press. Ashok received AAAI’s Outstanding AI Educator Award in 2019, and the University System of Georgia’s Hall of Fame Faculty Award for Scholarship of Teaching and Learning in 2020.</em></p>
-<p><em>Ansaf Salleb-Aouissi is a senior lecturer in computer science with specific interests in machine learning and AI applications, including education and healthcare. She has published in top quality venues including JMLR, TPAMI, AAAI,  ECML, PKDD, COLT, IJCAI, ECAI, CHILL, and AISTAT. She also has a genuine interest in education and teaching, particularly on how to translate complex topics and break up abstract concepts into a form understandable and engaging to students. Recently, she has been working on building education tools for auto-grading and self-learning to provide additional support to her students in computer science and discrete mathematics. Her EdX course on Artificial Intelligence has attracted over a quarter million learners from all over the world since 2017.</em></p>
-<p><em>Mehran Sahami is the James and Ellenor Chesebrough Professor in Engineering and Associate Chair for Education in the Computer Science department at Stanford University. He is also the Robert and Ruth Halperin University Fellow in Undergraduate Education. He served as co-chair of the ACM/IEEE-CS joint task force on Computer Science Curricula 2013, is Past Chair of the ACM Education Board, and was appointed by the Governor of California to the state's Computer Science Strategic Implementation Plan Advisory Panel.</em></p>
-<p><strong>[11:15 - 12:15]  Demos, Software Tools, and Activities for Teaching AI in K-12</strong>  </p>
-<ul>
-<li>Web-based Platform for K-12 AI Education in China<br>
-<em>Chao Wu, Yan Li, Junxiang Li, Qiongdan Zhang, Fei Wu</em></li>
-<li>PoseBlocks: A Toolkit for Creating (and Dancing) with AI<br>
-<em>Brian Jordan, Nisha Devasia, Jenna Hong, Randi Williams, Cynthia Breazeal</em></li>
-<li>Teaching Tech to Talk: K-12 Conversational Artificial Intelligence Literacy Curriculum and Development Tools<br>
-<em>Jessica Van Brummelen, Tommy Heng, Viktoriya Tabunshchyk</em> </li>
-</ul>
-<p><strong>[12:15 - 1:15]  Demos, Software Tools, and Activities for Teaching AI in K-12</strong>  </p>
-<ul>
-<li>GANs Unplugged<br>
-<em>Patrick Virtue</em></li>
-<li>What are GANs?: Introducing Generative Adversarial Networks to Middle School Students<br>
-<em>Daniella DiPaola, Safinah Ali, Cynthia Breazeal</em></li>
-<li>The Contour to Classification game<br>
-<em>Irene Lee, Safinah Ali</em> </li>
-</ul>
-<p><strong>[1:15 - 3:00]  Gin Rummy Undergraduate Research Challenge</strong>  </p>
-<ul>
-<li>Heisenbot: A Rule-Based Game Agent for Gin Rummy <br>
-<em>Matthew Eicholtz, Savanna Moss, Matt Traino, Christian Roberson</em></li>
-<li>A Highly-Parameterized Ensemble to Play Gin Rummy<br>
-<em>Masayuki Nagai, Kavya Shrivastava, Kien Ta, Steven Bogaerts, Chad Byers</em> </li>
-<li>Random Forests for Opponent Hand Estimation in Gin Rummy<br>
-<em>Anthony Hein, May Jiang, Vydhourie Thiyageswaran, Michael Guerzhoy</em></li>
-<li>Evaluating Gin Rummy Hands Using Opponent Modeling and Myopic Meld Distance<br>
-<em>Phoebe Goldman, Corey Knutson, Ryan Mahtab, Jack Maloney, Joseph Mueller, Richard Freedman</em></li>
-<li>Opponent Hand Estimation in Gin Rummy Using Deep Neural Networks and Heuristic Strategies<br>
-<em>Bhaskar Mishra, Ashish Aggarwal</em></li>
-<li>Modeling Expert and Folk Knowledge in a Heuristic-Based Reflex Agent for Gin Rummy<br>
-<em>Sarah Larkin, William Collicott, Jason Hiebel</em> </li>
-</ul>
-<p><strong>[3:00 - 3:45]  Model AI Assignments</strong>  </p>
-<ul>
-<li>“Unplugged” Semantic Networks and Knowledge Representations<br>
-<em>Duri Long, Jonathan Moon, Brian Magerko</em></li>
-<li>Introducing AI Worksheet Activity<br>
-<em>Duri Long, Jonathan Moon, Brian Magerko</em></li>
-</ul>
-<p><strong>[3:45 - 4:30]  Model AI Assignments</strong></p>
-<ul>
-<li>Rushhour: designing and comparing heuristics for a children's puzzle<br>
-<em>John Maraist</em> </li>
-<li>Using Markov Chain Text Generators to Facilitate Found Poetry Creation<br>
-<em>Alex Leto, Toni Lefton, Tom Williams</em> </li>
-</ul>
-<p><strong>[4:30 - 5:15]  Model AI Assignments</strong>  </p>
-<ul>
-<li>ScalarFlow: Implementing Reverse Mode Automatic Differentiation<br>
-<em>Nathan Sprague</em></li>
-<li>Text Denoising Autoencoder for News Headlines<br>
-<em>Lisa Zhang, Pouria Fewzee</em></li>
-</ul>
-<p><strong>[5:15 - 6:00]  Community Meeting</strong><br>
-All attendees are invited to join us for an informal community meeting at the end of EAAI-21, where we'll socialize and share ideas for next year's symposium.</p>
-            </div>
 </div>
+
 {% endblock %}
 
 {% block footer %}
