--- a/templates/index.html
+++ b/templates/index.html
@@ -30,10 +30,10 @@
   <div class="row header p-6 m-5">
     <div class="p-1 mx-auto text-center text-white col-md-9 col-sm-12">
       <h2>
-{#        {{config.tagline|safe}}#}
+        {{config.tagline|safe}}
       </h2>
       <h2 class="p-5">
-{#        {{config.date|safe}}#}
+        {{config.date|safe}}
       </h2>
     </div>
   </div>
@@ -92,6 +92,8 @@
         <div id="gitter" class="slp">
           <center>
             <iframe frameborder="0" src="https://{{config.chat_server}}/channel/announcements?layout=embedded" height="500px" width="100%" ></iframe>
+{#          <iframe width="560" height="315" src="https://www.youtube.com/embed/3Spk_UOHNxA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>#}
+
           </center>
         </div>
       </div>
