--- a/templates/undergraduate_consortium.html
+++ b/templates/undergraduate_consortium.html
@@ -105,9 +105,9 @@
 
 {% block content %}
 
-<div class="tutorials">
-    {{ components.uc_abstracts_group(tutorials_UC) }}
-</div>
+{#<div class="tutorials">#}
+{#    {{ components.uc_abstracts_group(tutorials_UC) }}#}
+{#</div>#}
 
 <script src="static/js/time-extend.js"></script>
 <script>
