--- a/templates/undergraduate_consortium.html
+++ b/templates/undergraduate_consortium.html
@@ -26,6 +26,11 @@
     <p>
     AAAI gratefully acknowledges the generous grants from AI Journal and the National Science Foundation, which make this program possible.
     </p>
+    <p>
+    Eric Aaron, Jim Boerkoel, and Mehmet Ergezer
+    <br />
+    Undergraduate Consortium Cochairs
+    </p>
 
     <div class="text-center p-3">
     <a href="https://aaai-uc.github.io/2021.html" target="_blank"  class="card-link">
@@ -89,16 +94,20 @@
   </div>
 </div>
 
-<div class="container" style="background-color:white; padding: 0px;">
-  <div class="text-muted text-center">
-  You can open <a href="https://{{config.chat_server}}/channel/Meetings_UndergraduateConsortium" target="_blank">Undergraduate Consortium</a>
-  channel in a separate window.
+
+<div class="row m-2">
+  <div class="col-md-7 col-xs-12 my-auto p-2">
+      <div class="text-muted text-center">
+        You can open <a href="https://{{config.chat_server}}/channel/Events_UndergraduateConsortium" target="_blank">Undergraduate Consortium</a>
+        channel in a separate window.
+      </div>
   </div>
 
-  <div id="gitter" class="slp">
-        <iframe frameborder="0" src="https://{{config.chat_server}}/channel/Meetings_UndergraduateConsortium?layout=embedded" height="700px" width="100%" ></iframe>
+  <div class="col-md-5 col-xs-12 p-2">
+      <div id="gitter" class="slp">
+        <iframe frameborder="0" src="https://aaai-21.rocket.chat/channel/Events_UndergraduateConsortium?layout=embedded" height="700px" width="100%" ></iframe>
+      </div>
   </div>
-
 </div>
 
 {% endblock %}
