--- a/templates/base.html
+++ b/templates/base.html
@@ -185,6 +185,9 @@
                     <a class="dropdown-item" href="undergraduate_consortium.html">
                       Undergraduate Consortium
                     </a>
+                    <a class="dropdown-item" href="student_abstract_program.html">
+                      Student Abstract Program
+                    </a>
                   </div>
                 </li>
               {% elif id == "Community" %}
