--- a/templates/components.html
+++ b/templates/components.html
@@ -571,7 +571,7 @@
 
           <div class="m-3 text-muted text-center">
             <h4>
-              <a href="undergraduate_c_abstract_{{uc.id}}.html" class="main-title" >
+              <a href="paper_{{uc.id}}.html" class="main-title" >
                 {{ uc.id }}: {{uc.title}}
               </a>
             </h4>
