--- a/templates/student_abstract_program.html
+++ b/templates/student_abstract_program.html
@@ -50,25 +50,23 @@
       AAAI-21 Student Abstract Poster Presentation Schedule
 </h2>
 
-<div class="text-center p-3">
-    <a class="card-link" data-toggle="collapse" role="button" href="#February_4">
-      February 4
-    </a>
-    <a class="card-link" data-toggle="collapse" role="button" href="#February_5">
-      February 5
-    </a>
-    <a class="card-link" data-toggle="collapse" role="button" href="#February_6">
-      February 6
-    </a>
-    <a class="card-link" data-toggle="collapse" role="button" href="#February_7">
-      February 7
-    </a>
-    <p>
-    (Click to show/hide)
-    </p>
+<div class="accordion" id="accordionExample">
+    <div class="text-center p-3">
+    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        February 4
+    </button>
+    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+        February 5
+    </button>
+    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+        February 6
+    </button>
+    <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+        February 7
+    </button>
 </div>
 
-<div id="February_4" class="pp-card m-3 collapse show">
+    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
   <h3 class="card-title main-title text-center">
       February 4
   </h3>
@@ -190,7 +188,7 @@
   </div>
 </div>
 
-<div id="February_5" class="pp-card m-3 collapse hide">
+    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
   <h3 class="card-title main-title text-center">
       February 5
   </h3>
@@ -312,7 +310,7 @@
   </div>
 </div>
 
-<div id="February_6" class="pp-card m-3 collapse hide">
+    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
   <h3 class="card-title main-title text-center">
       February 6
   </h3>
@@ -438,7 +436,7 @@
   </div>
 </div>
 
-<div id="February_7" class="pp-card m-3 collapse hide">
+    <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
   <h3 class="card-title main-title text-center">
       February 7
   </h3>
@@ -558,6 +556,7 @@
       </tbody>
     </table>
   </div>
+</div>
 </div>
 
 <div class="row m-2">
