--- a/templates/base.html
+++ b/templates/base.html
@@ -188,6 +188,9 @@
                     <a class="dropdown-item" href="student_abstract_program.html">
                       Student Abstract Program
                     </a>
+                    <a class="dropdown-item" href="demonstrations.html">
+                      Demonstrations
+                    </a>
                   </div>
                 </li>
               {% elif id == "Community" %}
