update job fair title

--- a/templates/ai_job_fair.html
+++ b/templates/ai_job_fair.html
@@ -2,15 +2,14 @@
 {% extends "base.html" %}
 
 {% block top %}
-{{ components.section("AI Job Fair") }}
+{{ components.section("AAAI/ACM SIGAI AI Job Fair") }}
 {% endblock %}
 
 {% block content %}
 
 <div class="row">
     <div class="col-12 pb-4">
-    <p class="lead">Welcome to AI job fair!<br><br>
-    Welcome to the AAAI/ACM SIGAI AI Job Fair!<br>
+    <p class="lead">Welcome to the AAAI/ACM SIGAI AI Job Fair!<br>
     Saturday, February 6<br>
     10:30 AM - 12:30 PM PT, 6:30 - 8:30 PM PT, 2:30 AM - 4:30 AM (February 7 PT)<br><br>
     
@@ -25,21 +24,20 @@
     Job Fair Cochairs<br>
     </p>
     
-    <p class="lead">AAAI/ACM SIGAI Job Fair Participating Companies:<br>
-    
-    Amazon,
-    IBM,
-    Baidu,
-    Google Research,
-    Sony,
-    Apple,
-    Bloomberg,
-    Dataminr,
-    LG AI Research,
-    Meituan,
-    Microsoft,
-    American Friends of the Alexander von Humboldt Foundation,
-    Ralph,
+    <p class="lead">AAAI/ACM SIGAI Job Fair Participating Companies:<br><br>
+    Amazon<br>
+    IBM<br>
+    Baidu<br>
+    Google Research<br>
+    Sony<br>
+    Apple<br>
+    Bloomberg<br>
+    Dataminr<br>
+    LG AI Research<br>
+    Meituan<br>
+    Microsoft<br>
+    American Friends of the Alexander von Humboldt Foundation<br>
+    Ralph<br>
     Wadhwani Institute for Artificial Intelligence
     </p>
   </div>
