--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -49,7 +49,7 @@
     {{ components.live_sessions(
         tutorial.blocks,
         tutorial.title,
-        "https://virtual.acl2020.org/tutorial_" + tutorial.id + ".html",
+        "https://virtual.2021.aaai.org/tutorial_" + tutorial.id + ".html",
         false) }}
 
   </div>
