--- a/templates/tutorials.html
+++ b/templates/tutorials.html
@@ -10,20 +10,20 @@
     You can also view the schedule by going to the "day" view on the <a href="schedule.html" target="_blank">Schedule</a>
     page for February 3rd.</div>
 
-<div class="text-center p-3">
-    <a class="card-link" role="button" href="#MQ_tutorials">
-      Morning Quarter-day Tutorials
-    </a>
-    <a class="card-link" role="button" href="#MH_tutorials">
-      Morning Half-day Tutorials
-    </a>
-    <a class="card-link" role="button" href="#AQ_tutorials">
-      Afternoon Quarter-day Tutorials
-    </a>
-    <a class="card-link" role="button" href="#AH_tutorials">
-      Afternoon Half-day Tutorials
-    </a>
-</div>
+{#<div class="text-center p-3">#}
+{#    <a class="card-link" role="button" href="#MQ_tutorials">#}
+{#      Morning Quarter-day Tutorials#}
+{#    </a>#}
+{#    <a class="card-link" role="button" href="#MH_tutorials">#}
+{#      Morning Half-day Tutorials#}
+{#    </a>#}
+{#    <a class="card-link" role="button" href="#AQ_tutorials">#}
+{#      Afternoon Quarter-day Tutorials#}
+{#    </a>#}
+{#    <a class="card-link" role="button" href="#AH_tutorials">#}
+{#      Afternoon Half-day Tutorials#}
+{#    </a>#}
+{#</div>#}
 
 {% endblock %}
 
