link description commit

--- a/templates/awards.html
+++ b/templates/awards.html
@@ -19,7 +19,6 @@
     </div>
     {% endfor %}
   </div>
-
   
   <div class="col-md-12 col-sm-12 pr-5 lead">
     <h2 style="margin-top: 30px"> Recipents </h2>
@@ -63,7 +62,7 @@
                   {{ae.talk.session_name}}: {{ ae.talk.day }}
                   <span class="session_times">{{ae.talk.time_string}}</span>
                   
-                    [<a href="{{ae.talk.link}}" class="card-link">Watch video</a>]
+                    [<a href="{{ae.talk.link}}" class="card-link">Link</a>]
                   
                 </div>
                 {% endif %}
