diversity programs description

--- a/templates/diversity_programs.html
+++ b/templates/diversity_programs.html
@@ -48,7 +48,7 @@
       <div class="mx-4 text-left card-subtitle">
         <p>{{social.description|safe}}</p>
 
-        <p class="text-center">This event takes place in {{ social.location }}.</p>
+        <p class="text-center">This event {{ social.location }}.</p>
 
         {% for session in social.sessions %}
           <div class="m-3 text-muted text-center">
