--- a/templates/about.html
+++ b/templates/about.html
@@ -35,7 +35,7 @@
   >
 
 
-    <div class="row p-3">
+    <!--<div class="row p-3">
       <div class="col-12 bd-content">
       By registering, participants acknowledge and agree to follow the
       <a href="https://www.aclweb.org/portal/content/acl-code-ethics">ACL's code of ethics</a>, the
@@ -46,10 +46,10 @@
       EMAIL and/or the <a href="https://2020.emnlp.org/organizers/ethics-committee">EMNLP Ethics Committee</a> : EMAIL.
       You can also report incidents in the PCC RocketChat channel, your messages will be treated absolutely confidential.
       </div>
-    </div>
+    </div>-->
 
     <div class="row p-3">
-          {{ components.subsection("ACL Code of Conduct") }}
+          {{ components.subsection("AAAI Code of Conduct for Conferences and Events") }}
 
       <div class="col-12 bd-content">
         <div>{{CodeOfConduct|markdown}}</div>
