Update time of tutorial
Update time of tutorial

--- a/templates/tutorials.html
+++ b/templates/tutorials.html
@@ -3,12 +3,30 @@
 {% set page_title = "Tutorials" %}
 
 {% block heading %}
-{{ components.section("Tutorial") }}
+{#{{ components.section("Tutorial") }}#}
 
-<div class="text-center text-muted">
+{{ components.section("AAAI-21 Tutorial Forum") }}
+
+<div class="pp-card m-3" style="">
+    <div class="card-header">
+    <h4 class="text-center">
+    Thirty-Fifth Conference on Artificial Intelligence
+    </h4>
+
+    <h5 class="text-center text-muted">
+    February 3, 2021
+    </h5>
+
+    <p>
+    The Tutorial Forum provides an opportunity for researchers and practitioners to explore exciting advances in disciplines outside their normal focus. We believe this type of forum is essential for the cross fertilization, cohesiveness, and vitality of the AI field. We all have a lot to learn from each other; the Tutorial Forum promotes the continuing education of each member of AAAI.
+    </p>
+    <p>
     Below are the tutorials to be held on February 3rd, 2021. Click on it to access its material. <br/>
     You can also view the schedule by going to the "day" view on the <a href="schedule.html" target="_blank">Schedule</a>
-    page for February 3rd.</div>
+    page for February 3rd.
+    </p>
+    </div>
+</div>
 
 {#<div class="text-center p-3">#}
 {#    <a class="card-link" role="button" href="#MQ_tutorials">#}
